ps: fix register form with error (button overlap with footer)

--- a/app/assets/stylesheets/qa.css
+++ b/app/assets/stylesheets/qa.css
@@ -9,6 +9,7 @@
 }
 
 #content {
+  position: relative;
   min-height: 100%;
   margin-bottom: -75px;
 }
